--- a/day12/pagination/index.html
+++ b/day12/pagination/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <style>
-           div.container {
-        margin:100px;
+            div.container {
+        margin: 10px;
         padding: 25px;
         font-size: x-large;
         }
@@ -16,10 +16,14 @@
             margin:auto;
             padding: 30px;
         }
-       
+        th,td,tr,table{
+            padding: 3px;
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
         .btn {
-        padding: 15px;
-        margin: 10px;
+        padding: 5px;
+        margin: 5px;
         background-color: rgb(100, 163, 36);
         font-weight: bolder;
         }
@@ -29,7 +33,10 @@
 
         </style>
 
-    </head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
 
     <body>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
