--- a/day33/new_password.html
+++ b/day33/new_password.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+    <script src="config.js"></script>
     <div class="container">
         <div class="row">
             <div class="col-6" id='col'>
@@ -33,7 +34,7 @@
         async function update(){
         var pwd1=document.getElementById('exampleInputPassword1').value
         var pwd2=document.getElementById('exampleInputPassword2').value
-        var url='http://localhost:3000/reset'
+        var url=`${window.backendURL}/reset`
         var random=window.location.search.split('=')
         var jsonInput=({password:pwd1,randomstring:random[1]})
 
