--- a/day33/password_reset.html
+++ b/day33/password_reset.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+    <script src="config.js"></script>
     <div class="container">
         <div class="row">
             <div class="col-6">
@@ -28,7 +29,7 @@
     <script>
         async function ForgotPassword() {
             let mail=document.getElementById('exampleInputEmail1').value
-            var url='http://localhost:3000/forgot'
+            var url=`${window.backendURL}/forgot`
             if(mail!=''){
             let jsonInput=({email:mail})
             let api=await fetch(url, {
