--- a/day33/registration.html
+++ b/day33/registration.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+  <script src="config.js"></script>
     <div class="container">
         <div class="row">
             <div class="col-6" id='col'>
